--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- Create an iframe tag-->
-
+    <iframe 
+    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d9680.285718265217!2d11.076735230090325!3d49.451107752277416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1653538367564!5m2!1sen!2sus" 
+    width="100%" 
+    height="400px" 
+    frameborder="1"
+    style="border:0;" 
+    allowfullscreen="" 
+    loading="lazy" 
+    referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
   </body>
 </html>
